--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,7 @@
   <packaging>pom</packaging>
   <modules>
   	<module>sly_middle_config</module>
+  	<module>sly_middle_web</module>
   </modules>
+  
 </project>
